AC_INIT(message-of-doom)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(libbonoboui2, 1.103.0)

AM_MAINTAINER_MODE

dnl
dnl Due to the sed scripts being split on 90 line
dnl blocks, this macro needs to be right at the beggining.
dnl
AM_PROG_XML_I18N_TOOLS

GNOME_COMMON_INIT
GNOME_PLATFORM_GNOME_2(yes, force)

AC_ISC_POSIX
AC_PROG_CC
AC_STDC_HEADERS
AM_PROG_LIBTOOL
AC_PROG_YACC
AC_PATH_PROGS(PATH_TO_XRDB, "xrdb")

GNOME_COMPILE_WARNINGS

ALL_LINGUAS="az ca es fr it nn no ru sk sv ta tr wa zh_CN zh_TW"
AM_GNOME2_GETTEXT

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

dnl
dnl Start of pkg-config checks
dnl
PKG_CHECK_MODULES(BONOBOUI, libgnomecanvas-2.0 >= 1.96.0 \
		  libbonobo-2.0 >= 1.101.2 libgnome-2.0 >= 1.96.0 \
		  bonobo-activation-2.0 >= 0.9.1)
AC_SUBST(BONOBOUI_CFLAGS)
AC_SUBST(BONOBOUI_LIBS)

# glib-genmarshal
AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)

AC_OUTPUT([
Makefile
po/Makefile.in
bonobo/Makefile
bonobo/libbonoboui-2.0.pc
samples/Makefile
samples/controls/Makefile
samples/bonoboui/Makefile
samples/compound-doc/Makefile
samples/compound-doc/container/Makefile
tests/Makefile
doc/Makefile
])

cat $srcdir/message-of-doom
